# cppdecl

./: LICENSE.md  README.md  known_issues.md  meson.build
.github/workflows/: github-actions.build-gcc.yaml  github-actions.build-node.yaml  github-actions.build-web.yaml
cmake/: Toolchain-wasm32-node.cmake  Toolchain-wasm32-web.cmake
include/cppdecl/: type_name.h
include/cppdecl/declarations/: data.h  parse.h  parse_simple.h  simplify.h  to_string.h
include/cppdecl/declarations/simplify_modules/: all.h  phmap.h
include/cppdecl/detail/: copyable_unique_ptr.h  enum_flags.h  overload.h  string_helpers.h
include/cppdecl/misc/: copyable_unique_ptr.h  demangler.h  enum_flags.h  indirect_optional.h  mixins.h  platform.h  string_helpers.h
include/cppdecl/parsing/: helpers.h  parse.h  result.h
source/: CMakeLists.txt  cppdecl-shell.cpp  cppdecl-shell.html  prettify_errors.cpp  repl.cpp  tests.cpp
